@@ -1,5 +1,7 @@
 package LeetCode;
 
+import org.junit.Test;
+
 import java.util.*;
 
 /**
@@ -12,23 +14,28 @@ public class _46 {
 
     public List<List<Integer>> permute(int[] nums) {
         int[] visited = new int[nums.length];
-        dfs(new ArrayDeque<>(), visited, nums);
+        dfs(new ArrayList<>(), visited, nums);
         return res;
     }
 
-    public void dfs(ArrayDeque<Integer> deque, int[] visited, int[] nums) {
-        if (deque.size() == nums.length) {
-            ArrayList<Integer> list = new ArrayList<>(deque);
-            res.add(list);
+    public void dfs(ArrayList<Integer> list, int[] visited, int[] nums) {
+        if (list.size() == nums.length) {
+            res.add(new ArrayList<>(list));
             return;
         }
         for (int i = 0; i < nums.length; i++) {
             if (visited[i] == 0) {
-                deque.addLast(nums[i]);
+                list.add(nums[i]);
                 visited[i]++;
-                dfs(deque, visited, nums);
-                deque.removeLast();
+                dfs(list, visited, nums);
+                visited[i]--;
+                list.remove(list.size() - 1);
             }
         }
+    }
+
+    @Test
+    public void test() {
+        System.out.println(permute(new int[]{1, 2, 3}));
     }
 }
